Bug 124344 - FILEOPEN DOCX Left and right horizontal alignment of vertically centered, 90 degree rotated text in table not preserved
Summary: FILEOPEN DOCX Left and right horizontal alignment of vertically centered, 90 ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2019-03-27 10:00 UTC by NISZ LibreOffice Team
Modified: 2019-04-12 11:35 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
The original file (18.26 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-03-27 10:03 UTC, NISZ LibreOffice Team
Details
A screenshot comparing LO Writer to MS Word (see the second row of the first table) (69.06 KB, image/png)
2019-03-27 10:04 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-03-27 10:00:15 UTC
Description:
The attached DOCX file has two 3x3 tables showcasing different combinations of alignments and text rotations. Most of them are interpreted well in the latest LibreOffice master, but the 90 degree rotated text in the second row of the first table is always centered horizontally, instead of the original left – centered – right alignment.

Steps to Reproduce:
    1. Insert a 3x3 table in Microsoft Word.
    2. Rotate the text by 90 degrees: text direction should go from bottom to top.
    3. Align the text in all possible 9 directions (Horizontal: left, center, right; Vertical: top, center, bottom).
    4. Save the file as DOCX.
    5. Open the file in LibreOffice Writer and see the results.

Alternatively, you can use the attached DOCX file (text_align_table.docx).

Actual Results:
The rotated text in the second row of the first table is horizontally centered in all three columns in LO Writer.

Expected Results:
The horizontal alignment of the rotated text in the second row of the first table should be the same in both MS Word and LO Writer.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Version: 6.3.0.0.alpha0+
Build ID: 2f83055cdbd915d5036a7b4374b4ad10e6efc65f
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded
Comment 1 NISZ LibreOffice Team 2019-03-27 10:03:32 UTC
Created attachment 150297 [details]
The original file
Comment 2 NISZ LibreOffice Team 2019-03-27 10:04:17 UTC
Created attachment 150298 [details]
A screenshot comparing LO Writer to MS Word (see the second row of the first table)
Comment 3 Xisco Faulí 2019-03-27 12:15:56 UTC
--- Comment #3 from Gabor Kelemen <kelemeng at ubuntu.com> ---
@Miklos, you might be interested in this. 
There was a lot of improvement in this area since 6.2, only a bit more would be
needed for perfection :).

Comment lost during the BZ outage -> https://lists.freedesktop.org/archives/libreoffice-bugs/2019-March/176648.html
Comment 4 mulla.tasanim 2019-04-03 18:36:18 UTC
Thank you for reporting the bug.

I have observed that alignment of rotated text for first table(All 3 rows) is not preserved in 6.2.1.2  
and alignment of rotated text for second row in first table is not preserved in 6.3.0.0.alpha0+

I can confirm that the bug is present in

Version: 6.2.1.2 (x64)
Build ID: 7bcb35dc3024a62dea0caee87020152d1ee96e71
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: CL


Version: 6.3.0.0.alpha0+ (x64)
Build ID: 91cdf22b88a4f7bec243c8fb187627e766d3294c
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-03-08_00:38:10
Locale: en-US (en_US); UI-Language: en-US
Calc: CL
Comment 5 Xisco Faulí 2019-04-05 08:58:56 UTC
Also reproduced in

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)
Comment 6 Commit Notification 2019-04-12 10:09:03 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/0013f21ecd918e0541f165c3526a58f42dd75481%5E%21

tdf#124344 sw btlr writing mode, DOCX import: fix vertical alignment

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.