tdf#124344 sw btlr writing mode, DOCX import: fix vertical alignment

The hack added in commit 3325e0f206ce864730468c3556ce06760042c157
(bnc#865381 DOCX import: handle w:jc=center inside w:textDirection=btLr,
2014-07-02) is no longer needed, actually just reverting it fixes the
problem, as then layout does the right thing.

No need to center paragraph adjustment to any kind of vertical
orientation, now that we have proper layout support.

Change-Id: I6aa74f5289a014c148fbd7c7ab03ec885d931daf
Reviewed-on: https://gerrit.libreoffice.org/70610
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>